# isaac-p2p-relay

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  client.yml  server.yml
dinput8/: CMakeLists.txt  dinput8.cpp  dinput8.def
hook/: hook.cpp  load.js  p2p_config.txt
include/: p2p_network.h
server/: Makefile  main.cpp
src/: connection_manager.cpp  connection_manager.h  p2p_network.cpp  packet_queue.cpp  packet_queue.h  platform_win.h
tests/: Makefile  p2p_tests  run_server_test.sh  test_helpers.h  test_main.cpp  test_p2p_forwarding.cpp  test_stress_forwarding.cpp
version/: CMakeLists.txt  version.cpp  version.def
winmm/: CMakeLists.txt  winmm.cpp  x86.def
